gcc-9 (9.1.0-6) UNRELEASED; urgency=medium

  * Update to SVN 20190630 (r272831) from the gcc-9-branch.
    - Fix PR sanitizer/90954, PR c++/91024, PR target/90991 (x86), PR c/90760,
      PR tree-optimization/90949, PR c++/90950.
  * Disable LTO builds for snapshot builds.
  * Don't use --push-state/--pop-state options for old linkers.

 -- Matthias Klose <doko@debian.org>  Sun, 30 Jun 2019 12:47:23 +0200

gcc-9 (9.1.0-5) experimental; urgency=medium

  * Update to SVN 20190628 (r272781) from the gcc-9-branch.
    - Fix PR libstdc++/85494, PR libstdc++/91012, R libstdc++/90920,
      PR libstdc++/90281, PR libstdc++/88881, PR libstdc++/90770,
      PR libstdc++/90252, PR ipa/90939, PR tree-optimization/90930,
      PR tree-optimization/90930, PR tree-optimization/90316,
      PR middle-end/64242, PR c++/90825, PR c++/90832, PR c++/90736,
      PR fortran/90937, PR fortran/90290, PR fortran/90002, PR fortran/89344,
      PR fortran/87907, PR fortran/86587, PR fortran/77632, PR fortran/69499,
      PR fortran/69398, PR fortran/68544, PR fortran/90577, PR fortran/90578.
  * Fix cross building gdc (Iain Buclaw).
  * Apply proposed fix for PR libgcc/90714 (ia64 only). Addresses: #930119.

 -- Matthias Klose <doko@debian.org>  Fri, 28 Jun 2019 13:13:25 +0200

gcc-9 (9.1.0-4) experimental; urgency=medium

  * Update to SVN 20190612 (r272183) from the gcc-9-branch.
    - Fix PR target/90811 (nvidia), PR libgomp/90641, PR libgomp/90585,
      PR c++/90598, PR libstdc++/90700, PR libstdc++/90686, PR libstdc++/90634,
      PR c/90474, PR d/90778, PR target/90751 (PARISC),
      PR tree-optimization/90450, PR tree-optimization/90402,
      PR tree-optimization/90328, PR debug/90733, PR target/82920 (x86),
      PR fortran/90329, PR fortran/90329, PR bootstrap/90543,
      PR c++/90810, PR c++/90598, PR c++/90548, PR fortran/90744,
      PR fortran/90329.
  * Update the watch file.

 -- Matthias Klose <doko@debian.org>  Wed, 12 Jun 2019 17:56:59 +0200
