@@ -185,6 +185,12 @@ ifeq ($(DEB_HOST_ARCH),$(DEB_TARGET_ARCH))
   TARGET_QUAL = :$(DEB_TARGET_ARCH)
 endif
 
+ifneq (,$(filter $(distrelease),squeeze wheezy lucid precise trusty xenial))
+  LOCALES = locales
+else
+  LOCALES = locales-all
+endif
+
 # The binutils version needed.
 # The oldest suitable versions for the various platforms can be found in
 # INSTALL/specific.html ; we take a tighter dependency if possible to be on
@@ -198,6 +204,8 @@ else
   BINUTILSBDV = 2.22
   ifneq (,$(filter $(distrelease),vivid))
     BINUTILSBDV = 2.25-3~
+  else ifneq (,$(filter $(distrelease),precise))
+    BINUTILSBDV = 2.22-6~
   else ifneq (,$(filter $(distrelease),trusty))
     BINUTILSBDV = 2.24-5~
   else ifneq (,$(filter $(distrelease),jessie))
@@ -416,10 +424,19 @@ ifeq (,$(findstring gcc,$(PKGSOURCE)))
   SOURCE_BUILD_DEP := gcc-$(BASE_VERSION)-source (>= $(GCC_SOURCE_VERSION)), gcc-$(BASE_VERSION)-source (<< $(NEXT_GCC_SOURCE_VERSION)),
 endif
 
-CHECK_BUILD_DEP := dejagnu [$(check_no_archs)] <!nocheck>,
+ifneq (,$(filter $(distrelease),squeeze wheezy lucid precise))
+  CHECK_BUILD_DEP := dejagnu [$(check_no_archs)],
+else
+  CHECK_BUILD_DEP := dejagnu [$(check_no_archs)] <!nocheck>,
+endif
 
 AUTO_BUILD_DEP := m4, libtool,
-AUTO_BUILD_DEP += autoconf2.64,
+autoconf_version = 2.69
+# FIXME should have a separate 2.69 package
+ifeq (,$(filter $(distrelease),lucid precise))
+  autoconf_version =
+endif
+AUTO_BUILD_DEP += autoconf$(autoconf_version),
 
 ifeq (,$(filter $(distrelease),lenny etch squeeze wheezy dapper hardy jaunty karmic lucid maverick natty oneiric precise quantal raring saucy trusty))
   SDT_BUILD_DEP = systemtap-sdt-dev [linux-any kfreebsd-any hurd-any],
@@ -432,11 +449,15 @@ ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
   endif
 endif
 
-OFFLOAD_BUILD_DEP += nvptx-tools [$(nvptx_archs)],
+ifeq (,$(filter $(distrelease),trusty precise))
+  OFFLOAD_BUILD_DEP += nvptx-tools [$(nvptx_archs)],
+endif
 
 PHOBOS_BUILD_DEP = lib32z1-dev [amd64 kfreebsd-amd64], lib64z1-dev [i386],
 ifeq ($(derivative),Ubuntu)
-  PHOBOS_BUILD_DEP += libx32z1-dev [amd64 kfreebsd-amd64 i386],
+  ifeq (,$(filter $(distrelease),precise))
+    PHOBOS_BUILD_DEP += libx32z1-dev [amd64 kfreebsd-amd64 i386],
+  endif
 endif
 
 ifneq ($(DEB_CROSS),yes)
@@ -493,11 +514,13 @@ endif
 GO_BUILD_DEP := netbase,
 
 # try to build with itself, or with the last version
-ifneq (,$(filter $(distrelease), squeeze lucid))
+ifneq (,$(filter $(distrelease), squeeze lucid precise))
   gnat_build_dep :=
 else ifneq (,$(filter $(distrelease), jessie))
   gnat_build_dep := gnat-4.9$(NT) [$(ada_no_archs)], g++-4.9$(NT)
-else ifneq (,$(filter $(distrelease), wheezy precise trusty wily xenial))
+else ifneq (,$(filter $(distrelease), precise))
+  gnat_build_dep := gnat-6$(NT) [$(ada_no_archs)], g++-6$(NT)
+else ifneq (,$(filter $(distrelease), wheezy trusty wily xenial))
   gnat_build_dep := gnat-5$(NT) [$(ada_no_archs)], g++-5$(NT)
 else ifneq (,$(filter $(distrelease), stretch yakkety zesty))
   gnat_build_dep := gnat-6$(NT) [$(ada_no_archs) !x32], g++-7 [x32], gnat-7 [x32], g++-6$(NT)
@@ -605,7 +628,8 @@ ctrl_flags = \
 	-DSRCNAME=$(PKGSOURCE) \
 	-D__$(DEB_TARGET_GNU_CPU)__ \
 	-DARCH=$(DEB_TARGET_ARCH) \
-	-DDIST=$(distribution)
+	-DDIST=$(distribution) \
+	-DLOCALES=$(LOCALES) \
 
 ctrl_flags += \
 	-DLIBC_DEV_DEP="$(LIBC_DEV_DEP)" \
