@@ -5,6 +5,9 @@ gcc-9 (9.1.0-6) UNRELEASED; urgency=medium
       PR tree-optimization/90949, PR c++/90950.
   * Disable LTO builds for snapshot builds.
   * Don't use --push-state/--pop-state options for old linkers.
+  * Fix explicit autoconf version for backport packages.
+  * Allow to build with the locales package instead of locales-all.
+  * Disable LTO and profiled builds for older binutils versions.
 
  -- Matthias Klose <doko@debian.org>  Sun, 30 Jun 2019 12:47:23 +0200
 
